# RiskEngine

./: .gitignore  LICENSE  README.md  README_zh.md  build.sh  settings.gradle.kts
.github/workflows/: build-release.yml
RiskEngineSdk/: gradle.properties
RiskEngineSdk/demo/: build.gradle.kts
RiskEngineSdk/gradle/: libs.versions.toml
RiskEngineSdk/riskengine-sdk/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
RiskEngineSdk/riskengine-sdk/src/main/cpp/: CMakeLists.txt  riskengine_jni.cpp
RiskEngineSdk/riskengine-sdk/src/main/cpp/antitamper/: custom_jni_register.cpp  custom_jni_register.h  memory_crc_checker.cpp  memory_crc_checker.h
RiskEngineSdk/riskengine-sdk/src/main/cpp/collector/: boot_id_collector.cpp  cpu_info_collector.cpp  cpu_info_collector.h  disk_size_collector.h  drm_collector.cpp  kernel_info_collector.cpp  mac_netlink_collector.cpp  mac_netlink_collector.h  system_property_collector.cpp  system_property_collector.h
RiskEngineSdk/riskengine-sdk/src/main/cpp/detector/: native_debug_detector.cpp  native_debug_detector.h  native_emulator_detector.cpp  native_hook_detector.cpp  native_hook_detector.h  native_root_detector.cpp  native_root_detector.h  native_signature_checker.cpp  seccomp_arch_checker.cpp
RiskEngineSdk/riskengine-sdk/src/main/cpp/util/: elf_parser.cpp  syscall_wrapper.cpp
RiskEngineServer/: Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
RiskEngineServer/sql/: init.sql
doc/: Implementation_Details_zh.md  README.md
gradle/: libs.versions.toml
riskengine-sdk/: build.gradle.kts
(+134 files in other folders)
